@@ -20,6 +20,7 @@ package com.linkedin.drelephant.util;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.apache.hadoop.conf.Configuration;
 import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
@@ -41,6 +42,24 @@ public class UtilsTest {
     assertEquals("bar", options2.get("foo"));
     assertEquals("bar2", options2.get("foo2"));
     assertEquals("bar3", options2.get("foo3"));
+  }
+
+  @Test
+  public void testParseJavaOptionsIgnoresNonStandardOptions() {
+    Map<String, String> options1 = Utils.parseJavaOptions("-Dfoo=bar -XX:+UseCompressedOops -XX:MaxPermSize=512m -Dfoo2=bar2");
+    assertEquals(2, options1.size());
+    assertEquals("bar", options1.get("foo"));
+    assertEquals("bar2", options1.get("foo2"));
+  }
+
+  @Test(expected = IllegalArgumentException.class)
+  public void testParseJavaOptionsThrowsIllegalArgumentExceptionForMissingAssignment() {
+    Utils.parseJavaOptions("-Dfoo");
+  }
+
+  @Test(expected = IllegalArgumentException.class)
+  public void testParseJavaOptionsThrowsIllegalArgumentExceptionForUnexpectedProperties() {
+    Utils.parseJavaOptions("-foo");
   }
 
   @Test
@@ -120,4 +139,88 @@ public class UtilsTest {
     assertEquals("bar2", properties2.get("foo2"));
     assertEquals("bar3", properties2.get("foo3"));
   }
+
+  @Test
+  public void testGetNonNegativeInt() {
+    Configuration conf = new Configuration();
+    conf.set("foo1", "100");
+    conf.set("foo2", "-100");
+    conf.set("foo3", "0");
+    conf.set("foo4", "0.5");
+    conf.set("foo5", "9999999999999999");
+    conf.set("foo6", "bar");
+
+    int defaultValue = 50;
+    assertEquals(100, Utils.getNonNegativeInt(conf, "foo1", defaultValue));
+    assertEquals(0, Utils.getNonNegativeInt(conf, "foo2", defaultValue));
+    assertEquals(0, Utils.getNonNegativeInt(conf, "foo3", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeInt(conf, "foo4", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeInt(conf, "foo5", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeInt(conf, "foo6", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeInt(conf, "foo7", defaultValue));
+  }
+
+  @Test
+  public void testGetNonNegativeLong() {
+    Configuration conf = new Configuration();
+
+    conf.set("foo1", "100");
+    conf.set("foo2", "-100");
+    conf.set("foo3", "0");
+    conf.set("foo4", "0.5");
+    conf.set("foo5", "9999999999999999");
+    conf.set("foo6", "bar");
+
+    long defaultValue = 50;
+    assertEquals(100, Utils.getNonNegativeLong(conf, "foo1", defaultValue));
+    assertEquals(0, Utils.getNonNegativeLong(conf, "foo2", defaultValue));
+    assertEquals(0, Utils.getNonNegativeLong(conf, "foo3", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeLong(conf, "foo4", defaultValue));
+    assertEquals(9999999999999999L, Utils.getNonNegativeLong(conf, "foo5", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeLong(conf, "foo6", defaultValue));
+    assertEquals(defaultValue, Utils.getNonNegativeLong(conf, "foo7", defaultValue));
+  }
+
+  @Test
+  public void testFormatStringOrNull() {
+    assertEquals("Hello world!", Utils.formatStringOrNull("%s %s!", "Hello", "world"));
+    assertEquals(null, Utils.formatStringOrNull("%s %s!", "Hello", null));
+  }
+ 
+  @Test 
+  public void testGetDurationBreakdown() {
+    long []durations = {13423,432344,23423562,23,324252,1132141414141L};
+    assertEquals("0:00:13", Utils.getDurationBreakdown(durations[0]));
+    assertEquals("0:07:12", Utils.getDurationBreakdown(durations[1]));
+    assertEquals("6:30:23", Utils.getDurationBreakdown(durations[2]));
+    assertEquals("0:00:00", Utils.getDurationBreakdown(durations[3]));
+    assertEquals("0:05:24", Utils.getDurationBreakdown(durations[4]));
+    assertEquals("314483:43:34", Utils.getDurationBreakdown(durations[5]));
+  }
+  @Test
+  public void testGetPercentage() {
+    long []numerators = {10,20,30,40,50};
+    long []denominators = {100,200,100,52,70};
+
+    assertEquals("10.00 %", Utils.getPercentage(numerators[0],denominators[0]));
+    assertEquals("10.00 %", Utils.getPercentage(numerators[1],denominators[1]));
+    assertEquals("30.00 %", Utils.getPercentage(numerators[2],denominators[2]));
+    assertEquals("76.92 %", Utils.getPercentage(numerators[3],denominators[3]));
+    assertEquals("71.43 %", Utils.getPercentage(numerators[4],denominators[4]));
+    assertEquals("NaN", Utils.getPercentage(0,0));
+  }
+
+  @Test
+  public void testGetDurationInGBHours() {
+
+    long []durations = {10000, 213234343, 23424, 635322, 213};
+
+    assertEquals("0.003 GB Hours", Utils.getResourceInGBHours(durations[0]));
+    assertEquals("57.844 GB Hours", Utils.getResourceInGBHours(durations[1]));
+    assertEquals("0.006 GB Hours", Utils.getResourceInGBHours(durations[2]));
+    assertEquals("0.172 GB Hours", Utils.getResourceInGBHours(durations[3]));
+    assertEquals("0 GB Hours", Utils.getResourceInGBHours(durations[4]));
+
+  }
+
 }
